@@ -34,7 +34,8 @@ requires:
   DateTime: 0
   English: 0
   Error::Pure: 0
-  MARC::Convert::Wikidata::Object: 0
+  MARC::Convert::Wikidata::Object: 0.05
+  MARC::Convert::Wikidata::Object::ExternalId: 0
   MARC::Convert::Wikidata::Object::ISBN: 0
   MARC::Convert::Wikidata::Object::Kramerius: 0
   MARC::Convert::Wikidata::Object::People: 0
