@@ -6,7 +6,7 @@ use MARC::Convert::Wikidata::Transform;
 use MARC::File::XML;
 use MARC::Record;
 use Perl6::Slurp qw(slurp);
-use Test::More 'tests' => 82;
+use Test::More 'tests' => 89;
 use Test::NoWarnings;
 use Test::Warn;
 use Unicode::UTF8 qw(decode_utf8 encode_utf8);
@@ -26,9 +26,14 @@ is($author->surname, 'Canetti', 'Masa a moc: Get author surname.');
 is($author->date_of_birth, 1905, 'Masa a moc: Get author date of birth.');
 is($author->date_of_death, 1994, 'Masa a moc: Get author date of death.');
 is($author->nkcr_aut, 'jn19990001316', 'Masa a moc: Get author NKČR AUT id.');
-is($ret->ccnb, 'cnb000087983', 'Masa a moc: Get ČČNB number.');
 is($ret->edition_number, 1, 'Masa a moc: Get edition number.');
 is_deeply($ret->editors, [], 'Masa a moc: Get editors.');
+my $external_ids_ar = $ret->external_ids;
+is(@{$external_ids_ar}, 2, 'Masa a moc: Get external ids count (2).');
+is($external_ids_ar->[0]->name, 'cnb', 'Masa a moc: Get external value name (cnb).');
+is($external_ids_ar->[0]->value, 'cnb000087983', 'Masa a moc: Get ČČNB number (cnb000087983).');
+is($external_ids_ar->[1]->name, 'lccn', 'Masa a moc: Get external value name (lccn).');
+is($external_ids_ar->[1]->value, '39576885', 'Masa a moc: Get ICCN number (39576885).');
 is_deeply($ret->illustrators, [], 'Masa a moc: Get illustrators.');
 is_deeply($ret->languages, ['cze'], 'Masa a moc: Get language.');
 is($ret->isbns->[0]->isbn, '80-85812-08-8', 'Masa a moc: Get ISBN-10.');
@@ -40,7 +45,6 @@ is($kramerius->url,
 	'http://kramerius.mzk.cz/search/handle/uuid:dec885c0-51fc-11e5-bf4b-005056827e51',
 	'Masa a moc: Get Kramerius object link.');
 is($ret->number_of_pages, 575, 'Masa a moc: Get number of pages.');
-is($ret->oclc, 39576885, 'Masa a moc: Get OCLC control number.');
 is($ret->publication_date, 1994, 'Masa a moc: Get publication date.');
 is($ret->publishers->[0]->name, 'Arcadia', 'Masa a moc: Get publisher.');
 is($ret->publishers->[0]->place, 'Praha', 'Masa a moc: Get publisher place.');
@@ -81,15 +85,19 @@ is($author->surname, decode_utf8('Čapek'), 'Krakatit: Get author surname.');
 is($author->date_of_birth, 1890, 'Krakatit: Get author date of birth.');
 is($author->date_of_death, 1938, 'Krakatit: Get author date of death.');
 is($author->nkcr_aut, 'jk01021023', 'Krakatit: Get author NKČR AUT id.');
-is($ret->ccnb, 'cnb000750997', 'Krakatit: Get ČČNB number.');
 is($ret->edition_number, undef, 'Krakatit: Get edition number.');
 is_deeply($ret->editors, [], 'Krakatit: Get editors.');
+$external_ids_ar = $ret->external_ids;
+is(@{$external_ids_ar}, 2, 'Krakatit: Get external ids count (2).');
+is($external_ids_ar->[0]->name, 'cnb', 'Krakatit: Get external value name (cnb).');
+is($external_ids_ar->[0]->value, 'cnb000750997', 'Krakatit: Get ČČNB number (cnb000750997).');
+is($external_ids_ar->[1]->name, 'lccn', 'Krakatit: Get external value name (lccn).');
+is($external_ids_ar->[1]->value, '3791532', 'Krakatit: Get ICCN number (3791532).');
 is_deeply($ret->illustrators, [], 'Krakatit: Get illustrators.');
 is_deeply($ret->isbns, [], 'Krakatit: Get ISBN-10.');
 is_deeply($ret->krameriuses, [], 'Krakatit: Get Kramerius objects.');
 is_deeply($ret->languages, ['cze'], 'Krakatit: Get language.');
 is($ret->number_of_pages, 377, 'Krakatit: Get number of pages.');
-is($ret->oclc, 3791532, 'Krakatit: Get number of pages.');
 is($ret->publication_date, 1939, 'Krakatit: Get publication date.');
 is($ret->publishers->[0]->name, decode_utf8('Fr. Borový'), 'Krakatit: Get publisher.');
 is($ret->publishers->[0]->place, 'Praha', 'Krakatit: Get publisher place.');
@@ -112,15 +120,17 @@ is($author->surname, decode_utf8('Karafiát'), 'Broučci: Get author surname.');
 is($author->date_of_birth, 1846, 'Broučci: Get author date of birth.');
 is($author->date_of_death, 1929, 'Broučci: Get author date of death.');
 is($author->nkcr_aut, 'jk01052941', 'Broučci: Get author NKČR AUT id.');
-is($ret->ccnb, 'cnb000576456', 'Broučci: Get ČČNB number.');
 is($ret->edition_number, 2, 'Broučci: Get edition number.');
 is_deeply($ret->editors, [], 'Broučci: Get editors.');
+$external_ids_ar = $ret->external_ids;
+is(@{$external_ids_ar}, 1, 'Broučci: Get external ids count (2).');
+is($external_ids_ar->[0]->name, 'cnb', 'Broučci: Get external value name (cnb).');
+is($external_ids_ar->[0]->value, 'cnb000576456', 'Broučci: Get ČČNB number (cnb000576456).');
 is_deeply($ret->illustrators, [], 'Broučci: Get illustrators.');
 is_deeply($ret->isbns, [], 'Broučci: Get ISBN-10.');
 is_deeply($ret->krameriuses, [], 'Broučci: Get Kramerius objects.');
 is_deeply($ret->languages, ['cze'], 'Broučci: Get language.');
 is($ret->number_of_pages, 85, 'Broučci: Get number of pages.');
-is($ret->oclc, undef, 'Broučci: Get OCLC number.');
 # TODO + ?
 is($ret->publication_date, 1919, 'Broučci: Get publication date.');
 is($ret->publishers->[0]->name, 'Alois Hynek', 'Broučci: Get publisher.');
