@@ -1,4 +1,5 @@
 0.12
+ - Rewrite Transform to store external ids in 'external_ids' parameter.
 
 0.11 2024-07-03T16:36:27+02:00
  - Add another date cleanup (asi 2010 and po Kr.). Thanks Josef Moravec.
